# LLMFactory

./: .env.example  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
LLMFactory/: __init__.py  llm.py
LLMFactory/providers/: __init__.py  anthropic.py  base.py  embeddings.py  gemini.py  llamacpp.py  lmstudio.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_anthropic.py  test_anthropic_bedrock.py  test_custom_oai.py  test_embeddings.py  test_factory.py  test_gemini.py  test_llamacpp.py  test_lmstudio.py  test_ollama.py  test_openai.py  test_utils.py
